[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Yancy Qi"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.9", features = [] }
tao = "0.20.0"
window-shadows = "0.2.1"
window-vibrancy = "0.3.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
lto = "thin"                # Performs "thin" LTO. It takes substantially less time to run while still achieving performance gains similar to "fat".

[profile.release]
panic = "abort"             # Strip expensive panic clean-up logic
codegen-units = 1           # Compile crates one after another so the compiler can optimize better
lto = true                  # Enables link to optimizations
opt-level = "s"             # Optimize for binary size
